set up app monitoring

--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,6 @@ FLASK_DEBUG = True
 FLASK_RUN_HOST = 'localhost'
 FLASK_RUN_PORT = 8080
 SQLALCHEMY_DATABASE_URI = 'postgresql://<username>:<password>@<host>:<port>/movies_db'
+
+SECRET_TOKEN = '<Elastic APM Secret Token>'
+SERVER_URL = '<Elastic APM server url>'
