setup docker and containarization of the app

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ marshmallow-sqlalchemy = "*"
 python-dotenv = "*"
 elastic-apm = {extras = ["flask"], version = "*"}
 gunicorn = "*"
+psycopg2-binary = "*"
+flask-caching = "*"
+redis = "*"
 
 [dev-packages]
 
