--- a/.env_example
+++ b/.env_example
@@ -4,7 +4,14 @@ FLASK_APP = app
 FLASK_DEBUG = True
 FLASK_RUN_HOST = 'localhost'
 FLASK_RUN_PORT = 8080
-SQLALCHEMY_DATABASE_URI = 'postgresql://<username>:<password>@<host>:<port>/movies_db'
+
+POSTGRES_USER = ''
+POSTGRES_PASSWORD = ''
+POSTGRES_DB = ''
+POSTGRES_HOST = ''
 
 SECRET_TOKEN = '<Elastic APM Secret Token>'
 SERVER_URL = '<Elastic APM server url>'
+
+CACHE_REDIS_HOST = ''
+CACHE_REDIS_PORT = 6379
